fix ruby rt display
- fixed off-center display for ruby text by adding support for the new ruby-text display value.

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1595,6 +1595,7 @@ ruby rt {
   /* START ruby-position:under; hack */
   font-size:11px; /* if font size is changed, various values will need to be adjusted */
   display:block;
+  display:ruby-text;
   /*OLD: (w/valign:top this doesn't seem necessary)
   height:15px;
   line-height:15px;*/
